# page-loader

./: .buildinfo  .gitignore  Makefile  README.MD  README.md  api.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  usage.html
.doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree  usage.doctree
.github/workflows/: pyci.yml  sphinx.yml
_sources/: index.rst.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  install.rst  usage.rst
page_loader/: __init__.py  page_loader.py  parse_args.py  path.py
page_loader/scripts/: page_loader.py
tests/: test_download.py
